Vehicle page added

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -237,6 +237,7 @@
                     android:foreground="?android:attr/selectableItemBackground">
 
                     <LinearLayout
+                        android:id="@+id/ll_earning"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="center"
@@ -247,7 +248,7 @@
                             android:layout_height="64dp"
                             android:background="@drawable/circle_purple"
                             android:padding="10dp"
-                            android:src ="@drawable/ic_monetization" />
+                            android:src="@drawable/ic_monetization" />
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -256,8 +257,6 @@
                             android:text="Earning"
                             android:textColor="@color/black"
                             android:textStyle="bold" />
-
-
 
 
                     </LinearLayout>
