--- a/app/src/main/res/layout/activity_fill_up_add.xml
+++ b/app/src/main/res/layout/activity_fill_up_add.xml
@@ -4,33 +4,44 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Add_Fill_Up">
+    tools:context=".Fill_Up_Add"
+    android:background="#d7e0da">
 
     <include
         android:id="@+id/include3"
         layout="@layout/toolbar2"></include>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="72dp"
+        android:background="@android:color/darker_gray"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/view6"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="16dp"
+        android:background="@android:color/darker_gray"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_fill_UP_display_model" />
 
     <TextView
         android:id="@+id/tv_add_date"
         android:layout_width="52dp"
         android:layout_height="33dp"
         android:layout_marginStart="104dp"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="84dp"
         android:text="@string/tv_add_date"
         android:textColor="@color/black"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/include3" />
-
-    <Button
-        android:id="@+id/btn_set_date"
-        android:layout_width="109dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="36dp"
-        android:text="@string/btn_set_date"
-        app:backgroundTint="@color/button_color"
-        app:layout_constraintBaseline_toBaselineOf="@+id/tv_add_date"
-        app:layout_constraintStart_toEndOf="@+id/tv_add_date" />
 
     <TextView
         android:id="@+id/tv_add_quentity"
@@ -76,7 +87,7 @@
         android:hint="@string/et_add_price"
         android:inputType="textPersonName"
         app:layout_constraintBaseline_toBaselineOf="@+id/tv_add_price"
-        app:layout_constraintStart_toEndOf="@+id/tv_add_price"/>
+        app:layout_constraintStart_toEndOf="@+id/tv_add_price" />
 
     <TextView
         android:id="@+id/tv_add_meter"
@@ -106,11 +117,11 @@
         android:id="@+id/btn_add_entry"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="60dp"
         android:text="@string/btn_add_entry"
         app:backgroundTint="@color/button_color"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_add_meter" />
 
@@ -118,10 +129,48 @@
         android:id="@+id/imageView3"
         android:layout_width="329dp"
         android:layout_height="231dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_add_entry"
         app:srcCompat="@drawable/vehicle1" />
+
+    <EditText
+        android:id="@+id/et_set_fill_date"
+        android:layout_width="159dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="40dp"
+        android:ems="10"
+        android:hint="@string/et_set_fill_date"
+        android:inputType="textPersonName"
+        app:layout_constraintBaseline_toBaselineOf="@+id/tv_add_date"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/tv_add_date" />
+
+    <TextView
+        android:id="@+id/tv_fill_up_display"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="88dp"
+        android:text="TextView"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/tv_fill_UP_display_model"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.682"
+        app:layout_constraintStart_toEndOf="@+id/tv_fill_UP_display_model" />
+
+    <TextView
+        android:id="@+id/tv_fill_UP_display_model"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="24dp"
+        android:text="@string/tv_fill_UP_display_model"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/include3" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
