--- a/app/src/main/res/layout/activity_fill_up_update.xml
+++ b/app/src/main/res/layout/activity_fill_up_update.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Edit_Fill_Up">
+    tools:context=".Fill_Up_Update"
+    android:background="#d7e0da">
 
     <include
         android:id="@+id/include5"
@@ -21,16 +22,6 @@
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/include5" />
-
-    <Button
-        android:id="@+id/btn_set_date_edit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="56dp"
-        android:text="@string/btn_set_date_edit"
-        app:backgroundTint="@color/button_color"
-        app:layout_constraintBaseline_toBaselineOf="@+id/tv_edit_date"
-        app:layout_constraintStart_toEndOf="@+id/tv_edit_date" />
 
     <TextView
         android:id="@+id/tv_edit_quentity"
@@ -106,7 +97,7 @@
         app:layout_constraintStart_toEndOf="@+id/tv_edit_meter" />
 
     <Button
-        android:id="@+id/btn_edit_entry"
+        android:id="@+id/btn_update_entry"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
@@ -116,5 +107,29 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_edit_meter" />
+
+    <EditText
+        android:id="@+id/et_edit_date"
+        android:layout_width="171dp"
+        android:layout_height="48dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name"
+        app:layout_constraintBaseline_toBaselineOf="@+id/tv_edit_date"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.833"
+        app:layout_constraintStart_toEndOf="@+id/tv_edit_date" />
+
+    <Button
+        android:id="@+id/btn_delete_entry"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="52dp"
+        android:text="@string/btn_delete_entry"
+        app:backgroundTint="@color/button_color"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_update_entry" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
