--- a/app/src/main/res/layout/activity_vehicle.xml
+++ b/app/src/main/res/layout/activity_vehicle.xml
@@ -15,25 +15,21 @@
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="16dp"
         android:text="@string/add_vehicle"
         app:backgroundTint="#3399FF"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.899"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.944" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
-    <ImageButton
-        android:id="@+id/imageButton4"
-        android:layout_width="381dp"
-        android:layout_height="117dp"
-        android:layout_marginTop="20dp"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycle_view_vehicle"
+        android:layout_width="361dp"
+        android:layout_height="551dp"
+        android:layout_marginTop="24dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.673"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include3"
-        app:srcCompat="@drawable/yaristwo" />
+        app:layout_constraintTop_toBottomOf="@+id/include3" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
