reminder pages added secondtime

--- a/app/src/main/res/layout/activity_update.xml
+++ b/app/src/main/res/layout/activity_update.xml
@@ -4,13 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/gradient_background3"
     tools:context=".UpdateActivity">
 
 
     <include
         layout="@layout/toolbar2"
-        android:layout_width="413dp"
-        android:layout_height="66dp"
+        android:layout_width="466dp"
+        android:layout_height="78dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -57,12 +58,12 @@
 
     <Button
         android:id="@+id/update_button3"
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_width="289dp"
+        android:layout_height="62dp"
         android:layout_marginTop="40dp"
         android:text="UPDATE"
-        android:textSize="20sp"
         android:textAllCaps="false"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/mileage_input3" />
@@ -70,12 +71,12 @@
 
     <Button
         android:id="@+id/delete_button4"
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:layout_marginTop="40dp"
+        android:layout_width="275dp"
+        android:layout_height="59dp"
+        android:layout_marginTop="28dp"
         android:text="DELETE"
-        android:textSize="20sp"
         android:textAllCaps="false"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/update_button3" />
