--- a/app/src/main/res/layout/activity_adddetails.xml
+++ b/app/src/main/res/layout/activity_adddetails.xml
@@ -4,10 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Adddetails">
+    tools:context=".Adddetails"
+    android:background="@drawable/gradient_background3">
 
 
-    <include layout="@layout/toolbar2" />
+    <include
+        layout="@layout/toolbar2"
+        android:background="@drawable/circle_purple" />
 
     <EditText
         android:id="@+id/title_input"
