--- a/app/src/main/res/layout/activity_fill_up_selectvehicle.xml
+++ b/app/src/main/res/layout/activity_fill_up_selectvehicle.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Fill_Up_Selectvehicle"
-    android:background="#d7e0da">
+    android:background="@drawable/fill_up_grandiant_background">
 
     <include
         android:id="@+id/include4"
