--- a/app/src/main/res/layout/activity_fill_up_update.xml
+++ b/app/src/main/res/layout/activity_fill_up_update.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Fill_Up_Update"
-    android:background="#d7e0da">
+    android:background="@drawable/fill_up_grandiant_background">
 
     <include
         android:id="@+id/include5"
@@ -44,7 +44,7 @@
         android:hint="@string/et_edit_quentity"
         android:inputType="textPersonName"
         android:textColor="@color/black"
-        android:textSize="24sp"
+        android:textSize="18sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/tv_edit_quentity"
         app:layout_constraintStart_toEndOf="@+id/tv_edit_quentity" />
 
