--- a/app/src/main/res/layout/activity_fill_ups.xml
+++ b/app/src/main/res/layout/activity_fill_ups.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Fill_Ups"
-    android:background="#d7e0da">
+    android:background="@drawable/fill_up_grandiant_background">
 
     <include
         android:id="@+id/include"
@@ -35,8 +35,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/FillUp_recyclerView"
-        android:layout_width="400dp"
-        android:layout_height="411dp"
+        android:layout_width="409dp"
+        android:layout_height="464dp"
         android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
